--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flashcard-app",
   "version": "0.0.1-5",
-  "description": "Multiplayer math flash card game",
+  "description": "math flash card game",
   "main": "math-server.js",
   "scripts": {
     "test": "node tests/All-tests.js",
@@ -19,8 +19,7 @@
     "game",
     "flashcard"
   ],
-  "author": "XYZ",
-  "license": "MIT",
+  "author": "Hrithik",
   "dependencies": {
     "ecstatic": "~0.4.13",
     "lodash": "~2.4.1",
